# portfolio

.github/workflows/: deploy-pages.yml  deploy-taskpulse-render.yml  deploy.yml
portfolio-spa/: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
portfolio-spa/chronostream-wasm/: Cargo.toml  Dockerfile
portfolio-spa/chronostream-wasm/src/: lib.rs
portfolio-spa/docs/: CHRONOSTREAM_DETAILED_SPEC.md
portfolio-spa/public/docs/: chronostream.html  taskpulse.html
portfolio-spa/src/: App.jsx  index.css
portfolio-spa/src/components/: CertificatesViewer.jsx  ContactSection.jsx  ProjectsExplorer.jsx  RetroForgeShowcase.css  RetroForgeShowcase.jsx  WasmCryptor.jsx
portfolio-spa/src/lib/: supabaseClient.js
portfolio-spa/supabase/: contact_messages.sql
taskpulse-laravel/: .env.example  Dockerfile  README.md  composer.json  docker-compose.yml  entrypoint-web.sh  entrypoint-worker.sh  render.yaml
taskpulse-laravel/app/Jobs/: CalculateSprintMetrics.php
taskpulse-laravel/app/Models/: Sprint.php  SprintMetricLog.php  Task.php  TaskStageTransition.php
taskpulse-laravel/bootstrap/: app.php
taskpulse-laravel/config/: horizon.php
taskpulse-laravel/database/migrations/: 2026_06_25_201757_create_02_tasks_table.php  2026_06_25_201757_create_03_task_stage_transitions_table.php  2026_06_25_201757_create_sprint_metric_logs_table.php  2026_06_25_201757_create_sprints_table.php
taskpulse-laravel/database/seeders/: DatabaseSeeder.php
taskpulse-laravel/routes/: api.php  web.php
(+5 files in other folders)
