[package]
name = "chronostream_wasm"
version = "0.1.0"
edition = "2021"
description = "ChronoStream crypto engine compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
